# tau

./: .gitignore  CLAUDE.md  README.md  install.sh  justfile  pyproject.toml  tau.example.toml
claude-skill/: tau.md
examples/: api_to_warehouse.py  append_only_logs.py  dag_pipeline.py  failing_pipeline.py  full_refresh_products.py  hello_pipeline.py  incremental_orders.py  partitioned_events.py  scd1_products.py  scd2_customers.py  scheduled_pipeline.py  snapshot_balances.py  view_active_users.py  warehouse_etl.py
src/tau/: __init__.py
src/tau/ai/: __init__.py  generator.py
src/tau/api/: ai.py  connections.py  dag.py  pipelines.py  router.py  runs.py  schedules.py  webhooks.py  workers.py
src/tau/cli/: main.py
src/tau/connections/: __init__.py  registry.py
src/tau/connectors/: __init__.py  base.py  bigquery.py  clickhouse.py  http_api.py  motherduck.py  mysql.py  postgres.py  redshift.py  s3.py  snowflake.py
src/tau/core/: auth.py  config.py  database.py
src/tau/daemon/: executor.py  main.py  scheduled_runner.py  scheduler.py  webhooks.py
src/tau/dag/: __init__.py  resolver.py  runner.py
src/tau/dashboard/: __init__.py  app.py
src/tau/materializations/: __init__.py  engine.py  strategies.py
src/tau/models/: __init__.py  dag.py  pipeline.py  run.py  schedule.py  worker.py
tests/: conftest.py  test_ai.py  test_api.py  test_connections.py  test_connectors.py  test_dag.py  test_decorators.py  test_executor.py  test_materialization_pipelines.py  test_materializations.py  test_pipeline_context.py  test_scheduler.py  test_workers.py
(+20 files in other folders)
