[project]
name = "tau-pipelines"
version = "0.1.0"
description = "AI-native data pipeline orchestration daemon"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Sam McCaffrey", email = "smccaffrey70@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "tomli>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
bigquery = ["google-cloud-bigquery>=3.20.0"]
snowflake = ["snowflake-connector-python>=3.6.0"]
motherduck = ["duckdb>=1.0.0"]
mysql = ["aiomysql>=0.2.0"]
redshift = ["asyncpg>=0.29.0"]
clickhouse = []  # uses httpx (already a core dep)
all = ["asyncpg>=0.29.0", "google-cloud-bigquery>=3.20.0", "snowflake-connector-python>=3.6.0", "duckdb>=1.0.0", "aiomysql>=0.2.0", "boto3>=1.34.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6.0"]

[project.scripts]
tau = "tau.cli.main:app"
taud = "tau.daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tau"]

[tool.ruff]
target-version = "py312"
line-length = 100
